Layout: day of week, date, temp. Background. Fonts Code: actual date. fake temp

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,13 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/weatherapp"
     tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/dayOfWeek"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/biryani"
         android:textAppearance="@style/TextAppearance.AppCompat.Display2"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.22"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -24,7 +27,9 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="2dp"
         android:layout_marginTop="50dp"
+        android:fontFamily="@font/biryani"
         android:textAppearance="@style/TextAppearance.AppCompat.Display2"
+        android:textColor="#B9FFFFFF"
         android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="@id/dayOfWeek"
         app:layout_constraintTop_toTopOf="@id/dayOfWeek" />
@@ -34,7 +39,10 @@
         android:id="@+id/temperature"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/biryani_light"
         android:textAppearance="@style/TextAppearance.AppCompat.Display2"
+        android:textColor="#FFFFFFFF"
+        android:textColorHint="#FFFFFF"
         app:layout_constraintHorizontal_bias="0.85"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -45,8 +53,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="45dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="36dp"
+        android:fontFamily="@font/biryani"
         android:textAppearance="@style/TextAppearance.AppCompat.Display2"
+        android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@id/temperature"
