--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -102,8 +102,8 @@
         android:id="@+id/temperatureUnits"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="75dp"
-        android:fontFamily="@font/biryani_extrabold"
+        android:layout_marginBottom="65dp"
+        android:fontFamily="@font/biryani_semibold"
         android:text="°F"
         android:textAlignment="textStart"
         android:textAppearance="@style/TextAppearance.AppCompat.Display2"
